DE close 2026-05-25→26 — QA-262233 cycle-2 archived + meta-layer trim-down restorations (CLAUDE.md sections, 9 amendments absorbed, quest-resume-preflight hook, skill frontmatter fixes)
QA-262233 cycle 2: BA Nurhafizah reopened on FAT (PTMLK/03/L/PRZ/2026/11 rendering 1 of 2 JTs). Root cause = populator's metadata-driven YB filter; UPEN on FAT has YB-style JSON keys but is a real Jabatan Teknikal. Fix shipped earlier in session as 5023fbf2fc on mlk/qa/262233v2 (etanah-pelupusan). Phase 2 closed: post-mortem + KPI + active.txt status=archived.

CLAUDE.md restorations (v1.27 → v1.29):
- Quest Workflow: trigger TABLE (incl. bare ticket #s as explicit example), 3 hard rules (Handoff/Notes/History first, Re-engagement load, Reading != understanding), Phase 0 visible 7-row checklist
- Active Project Rules / Etanah Non-Negotiables: 9 rules incl. working-analog-first
- Debug Mode Rituals: 4-ritual table with formats + activation conditions

New hook: quest-resume-preflight.js (UserPromptSubmit) — detects bare ticket #s + cross-checks active.txt + injects Phase 0 preflight when status in {hold/closed/archived/blocked/delegated}. Smoke-tested 3 scenarios. Registered. Hook count 36 → 37.

Amendments absorbed (9 → canonical homes):
- A7 + A9 → personality.md v1.7 Communication: DO
- A10 → commit-conventions.md v1.1 etanah section
- A12 + A15 → quest-protocol.md v3.4 Phase 0 + Phase 2 emit
- A3 + A5 + A6 already in quest-protocol.md (marked absorbed)
- A8 enforced by self-gate-impulse.js hook

claude-md-amendments.md lifecycle complete — file kept as historical disposition log.

Skill frontmatter fixes:
- /appraise + /checklist had NO YAML frontmatter (auto-trigger blind)
- /quest description extended with "start" + bare-ticket triggers

Ghost dir removed: .claude/skills/verify-close/ (empty after /verify supersession; cleaned earlier in session).

Slip log: 14 slip rows logged to meta/slip-log.md for this session. Primary class = quest-protocol-skip (quest never activated on ba